--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <header>
 	<div id="homeFullScreen">
 		<div class="header-text">
-			<h1>Rocket internet</h1>
+			<h1>Par faim du midi</h1>
 			<div class="vertical-line"></div>
 			<p>
-				LOREM IPSUM DOLOR SIT AMET NULLAM CONSEQUAT 
+				Découvrez notre nouveau parfun, 
 				<br />
-				INTERDUM VIVAMUS DONCE SED LIBERO.
+				ne ratez plus une seule pause déjeuné grace à celui ci !
 			</p>
 		</div>
 	</div>
@@ -45,8 +45,8 @@
 		<div class="row">
 			<div class="col-md-6 col-sm-6">
 				<div class="feature-box">
-					<h1>Lorem Ipsum</h1>
-					<p>Lorem Ipsum is Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+					<h1>Parfun féminin</h1>
+					<p>Développé dans le but de ne pas avoir à payer votre repas, vos collègue vont se faire envouter et vous payerons votre repas.</p>
 				</div>
 			</div><!-- End col-md-6 -->
 			<div class="col-md-6 col-sm-6 nopadding">
@@ -60,8 +60,8 @@
 			</div><!-- End col-md-6 -->
 			<div class="col-md-6 col-sm-6">
 				<div class="feature-box">
-					<h1>Lorem Ipsum</h1>
-					<p>Lorem Ipsum is Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 	the industry's standard dummy text ever since the 1500s,</p>
+					<h1>Parfun masculin</h1>
+					<p>Vous vous sentez seul lors de vos pause déjeuné ? Grâce à notre par-faim vous ne serez plus jamais seul vos collègues se précipiterons avec vous pour manger</p>
 				</div>
 			</div><!-- End col-md-6 -->
 		</div>
@@ -74,7 +74,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1 class="heading">Portfolio</h1>
+				<h1 class="heading">Images</h1>
 			</div><!-- End col-md-12 -->
 
 			<div class="col-md-4 col-sm-4">
@@ -107,14 +107,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>many variations of passages</h1>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration 
+				<h1>commandez votre échantillon</h1>
+				<p>Testez notre échantillon par-faim gratuitement  
 				<br />
-				in some form, by injected humour, or randomised words which don't look even slightly believable</p>
-				<span>LOREM IPSUM</span>
-			</div><!-- End col-md-12 -->
-		</div><!-- End row -->
-	</div><!-- End container -->
+				Envoyez nous un mail avec votre adresse et recevez gratuitement votre échantillon par-faim la semaine suivante</p>
+				<span>L'équipe Par-Faim</span>
+			</div>
+		</div>
+	</div>
 </section>
 
 <!-- Footer -->
@@ -124,7 +124,7 @@
 		<li><a href="#"><span><i class="fa fa-twitter"></i></span></a></li>
 		<li><a href="#"><span><i class="fa fa-youtube"></i></span></a></li>
 	</ul>
-	<span class="copyright">&#169; Untitled . All rights reserved. Design By <a href="http://templatestock.co">Templatestock.co</a></span>
+	<span class="copyright">&#169; Par-faim . All rights reserved. Design By <a href="http://templatestock.co">Templatestock.co</a></span>
 </footer>
 	
 
