--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 				<p>Testez notre échantillon par-faim gratuitement  
 				<br />
 				Envoyez nous un mail avec votre adresse et recevez gratuitement votre échantillon par-faim la semaine suivante</p>
+				<a href="mailto:echantillon@parfaim.com">echantillon@parfaim.com</a>  
 				<span>L'équipe Par-Faim</span>
 			</div>
 		</div>
