--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <header>
 	<div id="homeFullScreen">
 		<div class="header-text">
-			<h1>Par faim du midi</h1>
+			<h1>Par-faim du midi</h1>
 			<div class="vertical-line"></div>
-			<p>
+			<p class="slogan">
 				Découvrez notre nouveau parfun, 
 				<br />
 				ne ratez plus une seule pause déjeuné grace à celui ci !
@@ -40,30 +40,55 @@
 	</div>
 </header>
 
+<section>	
+	<div class="container">
+		<ul class="list-group">
+		<li class="list-group-item text-center"><a href="#feminin">Par-faim féminin</a></li>
+		<li class="list-group-item text-center"><a href="#masculin">Par-faim masculin</a></li>
+		<li class="list-group-item text-center"><a href="#autre">Par-faim autre</a></li>
+		<li class="list-group-item text-center"><a href="#gratuit">Echantillon gratuit !</a></li>
+	</ul>
+	</div>
+</section>
+
 <section class="feature">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-sm-6">
-				<div class="feature-box">
-					<h1>Parfun féminin</h1>
+				<div class="feature-box" id="feminin">
+					<h2>Par-faim féminin</h2>
 					<p>Développé dans le but de ne pas avoir à payer votre repas, vos collègue vont se faire envouter et vous payerons votre repas.</p>
 				</div>
 			</div><!-- End col-md-6 -->
 			<div class="col-md-6 col-sm-6 nopadding">
-				<img src="images/1.png">
+				<img src="images/mademoiselle.jpg">
 			</div><!-- End col-md-6 -->
 
-			<div class="clearfix"></div><!-- End clearfix -->
+			<div class="clearfix"></div>
 
 			<div class="col-md-6 col-sm-6 nopadding">
-				<img src="images/1.png">
+				<img src="images/monsieur.jpg">
 			</div><!-- End col-md-6 -->
 			<div class="col-md-6 col-sm-6">
-				<div class="feature-box">
-					<h1>Parfun masculin</h1>
+				<div class="feature-box" id="masculin">
+					<h2>Par-faim masculin</h2>
 					<p>Vous vous sentez seul lors de vos pause déjeuné ? Grâce à notre par-faim vous ne serez plus jamais seul vos collègues se précipiterons avec vous pour manger</p>
 				</div>
+			</div>
+
+
+			<div class="clearfix"></div>
+			
+			<div class="col-md-6 col-sm-6">
+				<div class="feature-box" id="autre">
+					<h2>Par-faim autre</h2>
+					<p>Vous ne rentrez pas dans les cases homme ou femme, ne vous inquitez pas grâce au par-faim ne mangez jamais seul à une table !</p>
+				</div>
 			</div><!-- End col-md-6 -->
+			<div class="col-md-6 col-sm-6 nopadding">
+				<img src="images/header.png">
+			</div><!-- End col-md-6 -->
+
 		</div>
 	</div>
 </section>
@@ -78,25 +103,25 @@
 			</div><!-- End col-md-12 -->
 
 			<div class="col-md-4 col-sm-4">
-				<img src="images/p-1.png">
+				<img src="images/1.jpg">
 			</div><!-- End col-md-4 -->
 			<div class="col-md-4 col-sm-4">
-				<img src="images/p-2.png">
+				<img src="images/2.jpg">
 			</div><!-- End col-md-4 -->
 			<div class="col-md-4 col-sm-4 last-img">
-				<img src="images/p-3.png">
+				<img src="images/3.jpg">
 			</div><!-- End col-md-4 -->
 
 			<div class="clearfix"></div><!-- End clearfix -->
 
 			<div class="col-md-4 col-sm-4">
-				<img src="images/p-4.png">
+				<img src="images/4.jpg">
 			</div><!-- End col-md-4 -->
 			<div class="col-md-4 col-sm-4">
-				<img src="images/p-5.png">
+				<img src="images/5.jpg">
 			</div><!-- End col-md-4 -->
 			<div class="col-md-4 col-sm-4 last-img">
-				<img src="images/p-6.png">
+				<img src="images/6.jpg">
 			</div><!-- End col-md-4 -->
 		</div><!-- End row -->
 	</div><!-- End container -->
@@ -105,20 +130,48 @@
 <!-- Call to Action -->
 <section class="call-top-action text-center">
 	<div class="container">
-		<div class="row">
+		<div class="row" id="gratuit">
 			<div class="col-md-12">
 				<h1>commandez votre échantillon</h1>
-				<p>Testez notre échantillon par-faim gratuitement  
+				<h3>Testez notre échantillon par-faim gratuitement  
 				<br />
-				Envoyez nous un mail avec votre adresse et recevez gratuitement votre échantillon par-faim la semaine suivante</p>
+				Recevez gratuitement votre échantillon par-faim la semaine suivante</h3>
 				<br />
 				<a href="mailto:echantillon@parfaim.com"><p>echantillon@parfaim.com</p></a>  
 				<span>L'équipe Par-Faim</span>
+
+				<form>
+					<div class="form-group">
+						<label for="exampleFormControlInput1">Votre adresse mail</label>
+						<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+					</div>
+					<div class="form-group">
+						<label for="exampleFormControlSelect1">Choix du Par-faim</label>
+						<select class="form-control" id="exampleFormControlSelect1">
+						<option>Féminin</option>
+						<option>Masculin</option>
+						<option>Autre</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="exampleFormControlInput1">Votre ville</label>
+						<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Paris">
+					</div>
+					<div class="form-group">
+						<label for="exampleFormControlInput1">Votre adresse</label>
+						<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="1 rue pasteur">
+					</div>
+					<div class="form-group">
+						<label for="exampleFormControlTextarea1">Informations suplémentaire</label>
+						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+					</div>
+					
+  					<button type="submit" class="btn btn-primary">Recevoir votre échantillon</button>
+				</form>
 			</div>
 		</div>
 	</div>
 </section>
-
 <!-- Footer -->
 <footer>
 	<ul class="in-line">
