--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<p class="slogan">
 				Découvrez notre nouveau parfun, 
 				<br />
-				ne ratez plus une seule pause déjeuné grace à celui ci !
+				ne ratez plus une seule pause déjeuner grâce à celui ci !
 			</p>
 		</div>
 	</div>
@@ -72,7 +72,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="feature-box" id="masculin">
 					<h2>Par-faim masculin</h2>
-					<p>Vous vous sentez seul lors de vos pause déjeuné ? Grâce à notre par-faim vous ne serez plus jamais seul vos collègues se précipiterons avec vous pour manger</p>
+					<p>Vous vous sentez seul lors de vos pauses déjeuner ? Grâce à notre par-faim vous ne serez plus jamais seul vos collègues se précipiteront avec vous pour manger</p>
 				</div>
 			</div>
 
