--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<h1>Par-faim du midi</h1>
 			<div class="vertical-line"></div>
 			<p class="slogan">
-				Découvrez notre nouveau parfun, 
+				Découvrez notre nouveau par-faim, 
 				<br />
 				ne ratez plus une seule pause déjeuner grâce à celui ci !
 			</p>
